# rcli

./: .gitignore  README.md  rcli.cabal
src/: Main.hs
src/Control/Monad/: MonadCLI.hs
src/System/Console/: LineParser.hs  RemoteCLI.hs
src/System/Console/RemoteCLI/: CommandHandler.hs  CommandLine.hs  CommandState.hs  Executor.hs  LineParser.hs
tests/: CommandHandlerTest.hs  CommandLineGen.hs  CommandLineTest.hs  CommandStateGen.hs  CommandStateTest.hs  LineParserTest.hs  TestMain.hs
