name:                rcli
version:             0.1.0.0
synopsis:            Generic and model driven CLI operating over ReST
-- description:         
homepage:            https://github.com/SneakingCat
license:             GPL-3
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          sneakingcatsw@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
cabal-version:       >=1.8

executable rcli
  main-is:             Main.hs
  other-modules:       Control.Monad.MonadCLI
  build-depends:       base ==4.5.*
                       , mtl >= 2.0
                       , transformers >= 0.2
  hs-source-dirs:      src
  ghc-options:         -Wall
