name:                rcli
version:             0.1.0.0
synopsis:            Generic and model driven CLI remotely operating over ReST
-- description:         
homepage:            https://github.com/SneakingCat
license:             GPL-3
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          sneakingcatsw@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
cabal-version:       >=1.8

test-suite rcli-tests
  type:                exitcode-stdio-1.0
  x-used-tf:           true
  main-is:             TestMain.hs
  hs-source-dirs:      src, tests
  ghc-options:         -Wall -fno-warn-orphans
  build-depends:       base >= 4 && < 5
                       , test-framework >= 0.4.1
                       , test-framework-quickcheck2 >= 0.3
                       , QuickCheck >= 2.0

executable rcli
  main-is:             Main.hs
  other-modules:       Control.Monad.MonadCLI
                       , System.Console.RemoteCLI
                       , System.Console.LineParser
  hs-source-dirs:      src
  ghc-options:         -Wall
  build-depends:       base >= 4 && < 5
                       , mtl >= 2.0
                       , transformers >= 0.2
                       , readline >= 1.0

